align mobile menus to baseline, fix menu width, and add transparent outer background

--- a/src/app/components/navbar.module.css
+++ b/src/app/components/navbar.module.css
@@ -41,14 +41,26 @@
     flex-direction: row-reverse;
     padding: 0.75rem;
   }
+  .outerMenu {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.25;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    transition: all 0.5s linear;
+  }
   .mobileMenu {
     display: flex;
     flex-direction: column;
+    align-items: baseline;
     position: fixed;
     top: 0;
     right: -100%;
     height: 100vh;
-    width: 50vw;
+    width: 65vw;
     background-image: linear-gradient(
       to bottom,
       var(--dark-primary),
@@ -56,7 +68,7 @@
     );
     backdrop-filter: blur(1rem);
     z-index: 10;
-    padding: 6rem 2rem;
+    padding: 6rem 2.5rem;
     gap: 2rem;
     transition: right 0.5s ease-in-out;
   }
